# tello

./: .gitignore  README.md  pyproject.toml  tello.py
tello/: drone.py  main.py
