[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling >= 1.11.0",
  "pip >= 22.0.0"
]


[project.scripts]
tello-example = "tello.main:main"


[project]
name            = "tello"
version         = "0.0.1"
description     = "Experiments with the Ryze tello drone from DJI"
readme          = "README.md"
license         = "MIT"
requires-python = ">=3.9"

authors = [
  { name = "Christopher Woodall", email = "woodall.christopher@gmail.com" },
]

keywords = [ ]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "djitellopy",
  # "ultralytics",
  "opencv-python == 4.5.1.48",
  "transformers",
  "timm",
  "torch",
  "torchvision",
  "numpy",
]


# [project.optional-dependencies]


[project.urls]
GitHub = "https://github.com/christopherwoodall/tello"


[tool.hatch.build]
ignore-vcs   = false
reproducible = true
directory    = "dist"
include = [
  "tello/",
  "pyproject.toml",
]

[tool.hatch.metadata]
allow-direct-references = true


[tool.isort]
profile = "black"
force_sort_within_sections = true
